--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "visualization-project",
   "version": "1.0.1",
   "description": "A D3.js Visualization Project. Includes tools for development and deployment.",
-  "main": "index.html",
   "scripts": {
-    "start": "http-server -p 8080",
-    "build": "parcel build ./index.html",
+    "start": "vite preview",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
@@ -17,6 +16,7 @@
     "parcel-plugin-static-files-copy": "^2.4.3"
   },
   "devDependencies": {
+    "@types/d3-tip": "^3.5.5",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -24,7 +24,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "@types/d3-tip": "^3.5.5"
+    "parcel": "^2.12.0",
+    "vite": "^5.4.0"
   },
   "staticFiles": {
     "staticPath": [
@@ -38,4 +39,3 @@
     "url": "https://github.com/Alpyg/inf8808e-project.git"
   }
 }
-
